--- a/assets/css/default.less
+++ b/assets/css/default.less
@@ -66,14 +66,15 @@ article {
 ============================================================================ */
 
 body {
-    font-family: 'Droid Sans', 'sans-serif';
+    font-family: 'Open Sans', 'sans-serif';
+    color: @font-color;
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Oswald', 'sans-serif';
     font-weight: normal;
     font-variant: small-caps;
     margin: 20px 0;
+    color: @header-font-color;
 }
 
 h1 {
@@ -104,7 +105,6 @@ h5 {
     nav {
         text-align: right;
         ul {
-            font-family: 'Droid Sans', 'sans-serif';
             li {
                 a {
                     text-decoration: none;
