--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -1,5 +1,6 @@
 @left-column-background-colour: #973333;
-@left-column-background-colour-gradient-start: #000;
 @right-column-background-colour: #FFFEEE;
 @nav-menu-link-color: #FFFFFF;
 @nav-menu-link-hover-color: darken(@left-column-background-colour, 10%);
+@font-color: #551E1E;
+@header-font-color: #555;
