--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,9 +2,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Oswald' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/assets/css/default.css" type="text/css">
     <link rel="stylesheet" href="/assets/css/mobile.css" type="text/css">
+    <link rel="stylesheet" href="/assets/css/suburst.prettify.css" type="text/css">
     <title>{{ page.title }}</title>
     <meta name="description" content="{% if page.tagline %}{{ page.tagline }}{% endif %}">
     
