--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -531,7 +531,7 @@ article {
    Site Colours / Styles
 ============================================================================ */
 body {
-  font-family: 'Droid Sans', 'sans-serif';
+  font-family: 'Open Sans', 'sans-serif';
   color: #551e1e;
 }
 h1,
