Code block styling/examples

--- a/assets/css/default.less
+++ b/assets/css/default.less
@@ -136,3 +136,9 @@ h5 {
 #right {
     background-color: @right-column-background-colour;
 }
+
+code.prettyprint {
+    width: 100%;
+    display: block;
+    padding: 10px;
+}
