--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,5 +10,7 @@
            </article>
        </div>
    </div>
+    
+    <script type="text/javascript" src="{{ site.baseurl }}assets/js/prettify.js"></script>
 </body>
 </html>
