--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -126,11 +126,13 @@ a {
 
             .tags {
                 display: block;
-                span {
+                span,
+                a {
                     .rounded(3px);
                     .font-size(1.2);
                     padding: 2px 5px;
                     background: @tag-color;
+                    border: none;
                 }
             }
         }
