--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -186,7 +186,8 @@ a {
 .aw_main article .tags {
   display: block;
 }
-.aw_main article .tags span {
+.aw_main article .tags span,
+.aw_main article .tags a {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -197,6 +198,7 @@ a {
   font-size: 1.2rem;
   padding: 2px 5px;
   background: #9a98f4;
+  border: none;
 }
 .aw #menutoggle {
   position: absolute;
