--- a/assets/less/styles.less
+++ b/assets/less/styles.less
@@ -38,9 +38,10 @@ a {
 
 .aw {
     &_main {
+        margin-top: 5%;
         article {
             width: 70%;
-            margin: 10% 20% 0 10%;
+            margin: 5% 20% 0 10%;
             
             a {
                 border-bottom: dotted 1px @nav-font-color;
