--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{ page.title }} | Alex Wyett</title>
     <meta name="description" content="{% if page.tagline %}{{ page.tagline }}{% endif %}">
+    <meta name="google-site-verification" content="ZDlWIICy7CXrkWa8D_hrPfpGVo-2DFGIYL8ZujSLnck" />
         
     <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html','' }}">
        
