--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,10 +9,19 @@
         <a href="/">{{ page.title }}{% if page.tagline %} <small>{{ page.tagline }}</small>{% endif %}</a>
     </h1>
     <nav class="nav" role="menu">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About Me</a></li>
-            <li><a href="/archive.html">Archive</a></li>
+        <ul class="vertical menu">
+          {% assign sorted_pages = site.pages | sort:"order" %}
+          {% for page in sorted_pages %}
+            {% if page.navigation %}
+              <li><a href="{{ BASE_PATH }}{{ page.url }}">
+                {% if page.navtitle %}
+                  {{ page.navtitle }}
+                {% else %}
+                  {{ page.title }}
+                {% endif %}
+              </a></li>
+            {% endif %}
+          {% endfor %}
         </ul>
     </nav>
 </aside>
