--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,26 +1,21 @@
-{% comment %}<!--
-Collate_posts helper. Collated posts by year and month.
-Usage:
-  1) assign the 'posts_collate' variable to a valid array of posts.
-  2) include JB/posts_collate
-  example:
-    {% assign posts_collate = site.posts %}
-    {% include JB/posts_collate %}
+---
+layout: base
+---
+<article>
+    <h2 class="title">
+        {{ page.title }}
+        <small>
+            {% if page.tagline %} {{ page.tagline }}{% endif %}
+            
+            {% assign spantags = page.tags %}
+            {% include tags.html %}
+            
+        </small>
+    </h2>
 
-  Ordering:
-    Posts are displayed in reverse chronological order.
-    For normal chronological order:
-      1) Change the for loop to this:
-        => 'for post in site.posts reversed'
-      2) Next make sure to change 'post.previous.date' to:
-        => 'post.next.date'
-        
--->{% endcomment %}
+    {{ content }}
 
-{% if site.JB.posts_collate.provider == "custom" %}
-  {% include custom/posts_collate %}
-{% else %}
-  {% for post in posts_collate  %}
+    {% for post in site.posts  %}
     {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
     {% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
     {% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
@@ -50,6 +45,5 @@ Usage:
         {% endif %}
       {% endif %}
     {% endif %}
-  {% endfor %}
-{% endif %}
-{% assign posts_collate = nil %}
+{% endfor %}
+</article>
