--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,29 +3,26 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    {% include head.html %}
-    <body class="aw">
+  {% include head.html %}
+  <body class="aw">
+    {% include sidebar.html %} 
+    <main class="aw_main">
+      <div class="search">
+        <input type="search" placeholder="Search">
+        <div id="results"></div>
+      </div>
+      {{ content }}
+    </main>
     
-    <!-- Google Tag Manager -->
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WW6D7N"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WW6D7N');</script>
-    <!-- End Google Tag Manager -->
-
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        {% include sidebar.html %} 
-        <main class="aw_main">
-            {{ content }}
-        </main>
-        
-        {% for script in page.javascript %}
-            <script src="/assets/js/{{ script }}.js"></script>
-        {% endfor %}
-    </body>
+    <script type="text/javascript">
+    {% assign allpages = site.posts | concat: site.pages %}
+    var pages = [
+      {% for item in allpages %}
+        {% include search.json %}
+        {% if forloop.last == false %},{% endif %}
+      {% endfor %}
+    ];
+    </script>
+    <script src="/assets/build/js/app.js"></script>
+  </body>
 </html>
