--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <title>{{ page.title }} | Alex Wyett</title>
     <meta name="description" content="{% if page.tagline %}{{ page.tagline }}{% endif %}">
     <meta name="google-site-verification" content="ZDlWIICy7CXrkWa8D_hrPfpGVo-2DFGIYL8ZujSLnck" />
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
     <link href="/assets/build/css/styles.css" rel="stylesheet" type="text/css" />
         
     <link rel="canonical" href="{{ site.production_url }}{{ page.url | replace:'index.html','' }}">
