--- a/assets/sass/sidebar.scss
+++ b/assets/sass/sidebar.scss
@@ -43,7 +43,7 @@
       margin: 20px auto;
       padding: 0;
       
-      background: url('http://www.gravatar.com/avatar/e7948869a7655f7476802505584722d0.png?s=200') no-repeat transparent;
+      background: url('//www.gravatar.com/avatar/e7948869a7655f7476802505584722d0.png?s=200') no-repeat transparent;
       background-size: 100% 100%;
       
       a {
